[maven-release-plugin] prepare release gemma-1_5